--- a/jsPractice.html
+++ b/jsPractice.html
@@ -18,7 +18,7 @@
 		*/
 
 		document.querySelector('h1').innerHTML = "Mady";
-		document.getElementById('URL').innerHTML = "/Users/madykwon/Downloads/jsPractice.html";
+		document.getElementById('URL').innerHTML = "https://madykwon.github.io/si339-assignments/jsPractice.html";
 		document.getElementById('items').innerHTML = "9";
 		document.getElementById('time').innerHTML = Date();
 		document.body.style.backgroundColor = "#ADD8E6";
